--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
   "name": "teamwork",
   "version": "1.0.0",
-  "description": "Andela Challenge: Teamwork is an internal social network for organizations’ employees",
+  "description": "Andela Challenge: Teamwork is an internal social network for organizations' employees. The goal of this application is to facilitate more interaction between colleagues and facilitate team bonding.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "export NODE_ENV=test && nyc --reporter=text mocha --exit --require @babel/register --require @babel/polyfill server/tests/*",
+    "start": "nodemon --exec babel-node ./index.js",
+    "coverage": "nyc report --reporter=text-lcov | coveralls"
   },
   "repository": {
     "type": "git",
@@ -17,21 +19,7 @@
   },
   "homepage": "https://github.com/nocodes/teamwork#readme",
   "dependencies": {
-    "@hapi/joi": "^15.1.1",
-    "bcrypt": "^3.0.6",
-    "cors": "^2.8.5",
-    "dotenv": "^8.1.0",
-    "express": "^4.17.1",
-    "jsonwebtoken": "^8.5.1",
-    "lodash": "^4.17.15",
-    "make-runnable": "^1.3.6",
-    "moment": "^2.24.0",
-    "morgan": "^1.9.1",
-    "pg": "^7.12.1",
-    "sinon": "^7.5.0",
-    "sinon-chai": "^3.3.0",
-    "sinon-express-mock": "^2.2.1",
-    "swagger-ui-express": "^4.0.7"
+    "express": "^4.17.1"
   },
   "devDependencies": {
     "@babel/cli": "^7.6.0",
