--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "Andela Challenge: Teamwork is an internal social network for organizations' employees. The goal of this application is to facilitate more interaction between colleagues and facilitate team bonding.",
   "main": "index.js",
   "scripts": {
+    "migrate": "babel-node ./server/database/index.js",
     "test": "export NODE_ENV=test && nyc --reporter=text mocha --exit --require @babel/register --require @babel/polyfill server/tests/*",
-    "start": "nodemon --exec babel-node ./index.js",
-    "coverage": "nyc report --reporter=text-lcov | coveralls"
+    "start": "nodemon --exec babel-node ./index.js"
   },
   "repository": {
     "type": "git",
@@ -19,7 +19,8 @@
   },
   "homepage": "https://github.com/nocodes/teamwork#readme",
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "pg": "^7.12.1"
   },
   "devDependencies": {
     "@babel/cli": "^7.6.0",
@@ -40,6 +41,7 @@
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-react": "^7.14.3",
     "eslint-plugin-react-hooks": "^1.7.0",
+    "make-runnable": "^1.3.6",
     "mocha": "^6.2.0",
     "mocha-lcov-reporter": "^1.3.0",
     "nyc": "^14.1.1"
