--- a/package.json
+++ b/package.json
@@ -25,10 +25,11 @@
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.24.0",
+    "morgan": "^1.9.1",
     "multer": "^1.4.2",
     "pg": "^7.12.1",
     "swagger-ui-express": "^4.1.2"
-  },
+  }, 
   "devDependencies": {
     "@babel/cli": "^7.6.0",
     "@babel/core": "^7.6.0",
