--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,7 @@
+env:
+  global:
+    - CC_TEST_REPORTER_ID=8f97267c7e450507f40b55f42e0d8979eb8fd9e3c5e18affa422e79a828847cd
+
 language: node_js
 
 node_js:
@@ -10,8 +14,12 @@ services:
 before_script:
   - npm install coverage
   - npm install -g nyc
+  - curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
+  - chmod +x ./cc-test-reporter
+  - ./cc-test-reporter before-build
   - psql -c 'create database teamwork_db_test;' -U postgres
 script:
   - npm test
 after_script:
- 
+  - npm run coverage
+  - ./cc-test-reporter after-build --exit-code $TRAVIS_TEST_RESULT
