chore(heroku setup): add procfile

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "migrate": "babel-node ./server/database/index.js",
     "test": "set NODE_ENV=test && nyc --reporter=text mocha --exit --require @babel/register --require @babel/polyfill server/tests/*",
-    "start": "nodemon --exec babel-node ./index.js"
+    "start": "nodemon --exec babel-node ./index.js",
+    "heroku": "babel-node ./index.js"
   },
   "repository": {
     "type": "git",
